--- a/src/Dashboard.Default.html
+++ b/src/Dashboard.Default.html
@@ -71,10 +71,10 @@
             <div class="scroll">
                 <ul class="list-unstyled">
                     <li class="active">
-                        <a href="#dashboard">
+                        <a href="Dashboard.Default.html">
                            <i class="simple-icon-grid"></i>
                             <span>Dashboards</span>
-                        </a>
+                        </a> 
                     </li>
                     <li>
                         <a href="#facebook"> 
@@ -86,10 +86,7 @@
         </div>
 
           <div class="sub-menu">
-			<div class="scroll">
-			  <ul class="list-unstyled" data-link="dashboard">
-				<li class="active"> <a href="Dashboard.Default.html"> <i class="simple-icon-rocket"></i> Default </a> </li> 
-			  </ul>
+			<div class="scroll"> 
 			  <ul class="list-unstyled" data-link="facebook">
 				<li> <a href="Accounts.html"> Accounts </a> </li>
 				<li> <a href="Mapping.html"> Mapping </a> </li>
