--- a/src/Mapping.html
+++ b/src/Mapping.html
@@ -70,8 +70,8 @@
         <div class="main-menu">
             <div class="scroll">
                 <ul class="list-unstyled">
-                    <li>
-                        <a href="#dashboard">
+                    <li>  
+                        <a href="Dashboard.Default.html">
                            <i class="simple-icon-grid"></i>
                             <span>Dashboards</span>
                         </a>
@@ -83,13 +83,9 @@
                     </li> 
                 </ul>
             </div>
-        </div>
-
+        </div> 
           <div class="sub-menu">
-			<div class="scroll">
-			  <ul class="list-unstyled" data-link="dashboard">
-				<li> <a href="Dashboard.Default.html"> <i class="simple-icon-rocket"></i> Default </a> </li> 
-			  </ul>
+			<div class="scroll"> 
 			  <ul class="list-unstyled" data-link="facebook">
 				<li> <a href="Accounts.html"> Accounts </a> </li>
 				<li class="active"> <a href="Mapping.html"> Mapping </a> </li>
